# modular_slam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: LibraryConfig.cmake
scripts/: ComputeTotalSquaredError.py  ComputeTotalSquaredError_v2.py  DrawPosesRaw.py  DrawPosesRawRtabmap.py  DrawPosesRawRtabmap_old.py  GraphPlotter.py  TrajectoryComparison.py
src/: .gitignore  CMakeLists.txt  DrawPosesRaw.py  DrawPosesRawRtabmap.py  Entities.h  Entity.cpp  Entity.h  Factor.cpp  KeyFrame  KeyFrame.cpp  KeyFrame.h  LandMark  LandMark.cpp  LandMark.h  LocalizationExample.cpp  Optimizer.cpp  Optimizer.h  PlotDataSet.cpp  PlotDataSet.h  PoseFactor.cpp  PoseFactor.h  RefFrame  RefFrame.cpp  RefFrame.h  SFPlot.cpp  Transform.cpp  Transform.h  UdpClient.cpp  UdpClientServer.h  UdpServer.cpp  UnaryFactor.cpp  WorldModel.cpp  WorldModel.h  WorldModelInterface.cpp  WorldModelInterface.h  WorldModelPlotter.cpp  WorldModelPlotter.h  WorldModelquedaerrorperoeseldertabmapconlotoro.cpp  main.cpp  rawposes.txt  (+2 more)
src/examples/: LocalizationExample.cpp  SFMdata.h  boost_example.cpp  gtsam2dslam.cpp
src/porsi/: WorldModel.h
src/scripts/: DrawPosesRaw.py
testing/: slam2d.txt  slam2dworldmodel.txt  slam3dworldmodel.txt  slampose2topose3worldmodel.txt  test1_rtabmap_output.txt  typescript.txt  typescript2.txt  typescript3.txt  typescript4.txt  typescript5.txt  typescript6.txt
